--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-numpy
-pickle-mixin
-streamlit
-streamlit-option-menu
-scikit-learn
-protobuf==3.20.1
-Pillow
+Pillow==9.3.0
+streamlit==1.16.0
+streamlit_option_menu==0.3.2
